--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,16 @@ beautifulsoup4==4.6.0
 bs4==0.0.1
 certifi==2018.1.18
 chardet==3.0.4
+click==6.7
 decorator==4.2.1
+Flask==0.12.2
 idna==2.6
 ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
+MarkupSafe==1.0
 nbformat==4.4.0
 nltk==3.2.5
 oauthlib==2.0.6
@@ -22,3 +27,4 @@ traitlets==4.3.2
 tweepy==3.6.0
 urllib3==1.22
 virtualenv==15.2.0
+Werkzeug==0.14.1
